# Final_project_epsilon

./: EDA.ipynb  README.md  data_collected.ipynb  data_preprocessing and model creation.ipynb  data_visualization.ipynb  dataset.csv  genre_classifier.py  logistic_regression_model.pkl  pyproject.toml  scaler.pkl  streamlit_deployment.ipynb
