[project]
name = "course-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audioread>=3.0.1",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "jupyter-collaboration>=4.0.2",
    "keras>=3.10.0",
    "llvmlite==0.41.1",
    "numba==0.58.1",
    "librosa==0.10.1",
    "matplotlib>=3.9.4",
    "mutagen>=1.47.0",
    "notebook>=7.4.3",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydot>=4.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "streamlit>=1.46.1",
    "tqdm>=4.67.1",
    "xgboost>=2.1.4",
]
